objects/RMA_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Expected_Return_Quantity__c</fullName>
        <label>Expected Return Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Category_1__c</fullName>
        <formula>Item__r.Item_Category_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Category 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <formula>Item__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipName>RMA_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <picklist>
            <picklistValues>
                <fullName>Fronius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KACO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV Powered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SatCon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serengeti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarbridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenesol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xantrex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multitech Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solaredge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZyXel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPDV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPTT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jabil Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jabil Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flextronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenesol - Delta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santerno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPTXS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPMX 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunEnergy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <label>RMA</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>RMA Line Items</relationshipLabel>
        <relationshipName>RMA_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <label>Received Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity__c</fullName>
        <label>Shipped Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RMA Line Item</label>
    <nameField>
        <label>RMA Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMA Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Expected_Return_Quantity_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
ISPICKVAL(Type__c , &apos;Return&apos;), 
ISBLANK(Expected_Return_Quantity__c),NOT($User.ByPassValidation__c) 
)</errorConditionFormula>
        <errorDisplayField>Expected_Return_Quantity__c</errorDisplayField>
        <errorMessage>Expected Return Quantity required for return part</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expected_Return_Quantity_should_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
ISPICKVAL(Type__c , &apos;Replacement&apos;), 
NOT(ISBLANK(Expected_Return_Quantity__c)),NOT($User.ByPassValidation__c)
)</errorConditionFormula>
        <errorDisplayField>Expected_Return_Quantity__c</errorDisplayField>
        <errorMessage>Expected Return Quantity should be blank for replacement part</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Received_Quantity_should_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
ISPICKVAL(Type__c , &apos;Replacement&apos;), 
NOT(ISBLANK(Received_Quantity__c)),NOT($User.ByPassValidation__c) 
)</errorConditionFormula>
        <errorDisplayField>Received_Quantity__c</errorDisplayField>
        <errorMessage>Received Quantity should be blank for replacement part</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shipped_Quantity_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
ISPICKVAL(Type__c , &apos;Replacement&apos;),
ISBLANK(Shipped_Quantity__c),NOT($User.ByPassValidation__c)
)</errorConditionFormula>
        <errorDisplayField>Shipped_Quantity__c</errorDisplayField>
        <errorMessage>Shipped Quantity required for replacement part</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shipped_Quantity_should_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
ISPICKVAL(Type__c , &apos;Return&apos;), 
NOT(ISBLANK(Shipped_Quantity__c)),NOT($User.ByPassValidation__c) 
)</errorConditionFormula>
        <errorDisplayField>Shipped_Quantity__c</errorDisplayField>
        <errorMessage>Shipped Quantity should be blank for return part</errorMessage>
    </validationRules>
</CustomObject>